# ugractf-2023-school

./: LICENSE  README.md
tasks/_scripts/: kyzylborda-lib-generator  kyzylborda-lib-quarantine-daemon
tasks/brevity/: README.md  WRITEUP.md  brevity.yaml  solve.sh
tasks/brevity/app/: Dockerfile  isolate_binaries.sh  (+4 more)
tasks/circulation/: Dockerfile.generator  README.md  WRITEUP.md  base.pcapng  circulation.yaml  generator.py  solve.sh
tasks/classic/: .gitattributes  README.md  WRITEUP.md  classic.yaml  default.nix  flake.nix  generator.py  pyproject.toml  run_generator.sh
tasks/classic/mac_c_source/: README.md  main.c
tasks/classic/private/: disker.py  release-004.img
tasks/classified/: .gitattributes  .gitignore  README.md  WRITEUP.md  classified.yaml  decode.sh  generate_jab.py  requirements.txt
tasks/endlessline/: .gitignore  Dockerfile  README.md  WRITEUP.md  docker-compose.yml  endlessline.yaml  generator.py  run_generator.sh
tasks/endlessline/app/: Cargo.toml  start.sh
tasks/endlessline/app/src/: main.rs
tasks/endlessline/app/static/: .gitattributes  style.css
tasks/endlessline/app/templates/: index.html.tera  success.html.tera
tasks/moonshot/: .gitattributes  README.md  WRITEUP.md  exploit-fixed.mac  exploit.asm  moonshot.yaml
tasks/msr/: Dockerfile.generator  README.md  WRITEUP.md  generator.py  msr.c  msr.yaml  solve.py
tasks/nucached/: README.md  WRITEUP.md  nucached.yaml
tasks/nucached2/: README.md  WRITEUP.md  nucached2.yaml
tasks/payoff/: README.md  WRITEUP.md  payoff.yaml
tasks/qrec2/: WRITEUP.md  exploit.asm  qrec2.yaml
(+35 files in other folders)
