[package]
name = "endless-line"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
crc32fast = "1.3.2"
hex = "0.4.3"
rand = "0.8.5"
rocket = { version = "0.5.0-rc.2", features = ["secrets"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
sha2 = "0.10.6"
